# dso

./: BUILD.bazel  CMakeLists.txt
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemOptimize.cpp  HessianBlocks.h  PixelSelector.h  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  Output3DWrapper.h
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.h  RawResidualJacobian.h
src/util/: FrameShell.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  globalCalib.h  globalFuncs.h
