cc_library(
    name = "dso_explicit",
    deps = ["@dso//:lib"],
    linkstatic = True,
)

cc_library(
    name = "dso_lib",
    hdrs = [
        "src/FullSystem/FullSystem.h",
        "src/util/NumType.h",
        "thirdparty/Sophus/sophus/sim3.hpp",
        "thirdparty/Sophus/sophus/rxso3.hpp",
        "thirdparty/Sophus/sophus/sophus.hpp",
        "thirdparty/Sophus/sophus/so3.hpp",
        "thirdparty/Sophus/sophus/se3.hpp",
        "src/util/globalCalib.h",
        "src/util/settings.h",
        "src/FullSystem/Residuals.h",
        "src/util/globalFuncs.h",
        "src/IOWrapper/ImageDisplay.h",
        "src/util/MinimalImage.h",
        "src/OptimizationBackend/RawResidualJacobian.h",
        "src/FullSystem/HessianBlocks.h",
        "src/util/ImageAndExposure.h",
        "src/util/FrameShell.h",
        "src/util/IndexThreadReduce.h",
        "src/OptimizationBackend/EnergyFunctional.h",
        "src/FullSystem/PixelSelector2.h",
    ],
    deps = [":dso_explicit"],
    copts = [
        "-I src",
        "-I thirdparty/Sophus",
        "-Wno-old-style-cast", 
        "-Wno-deprecated-declarations", 
        "-Wno-extra-semi",
        "-Wno-implicit-int-float-conversion"   ,
        "-Wno-float-conversion",
        "-Wno-mismatched-tags",
        "-Wno-shadow",
        "-Wno-header-guard",
        "-Wno-zero-as-null-pointer-constant",
        "-Wno-implicit-float-conversion",
        "-Wno-unused-parameter",
    ],
    strip_include_prefix = "/third_party/dso",
    # linkstatic = True,
    visibility = ["//visibility:public"],
)